# app/Http/Controllers/UserController.php
@@ -7,6 +7,7 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\User\CreateRequest;
+use App\Http\Requests\User\UpdateRequest;
 use App\Models\User;
 use App\Services\UserService;
 use App\Transformers\Commons\ErrorResource;
@@ -147,5 +148,49 @@ class UserController extends BaseController
     public function store(Request $request): JsonResponse
     {
         return parent::store($request); // TODO: Change the autogenerated stub
+    }
+
+    #[OA\Put(
+        path: '/users/{id}',
+        summary: 'Update user. ***DONE***',
+        security: [['BearerAuth' => []]],
+        requestBody: new OA\RequestBody(
+            required: true,
+            content: new OA\JsonContent(
+                          ref: UpdateRequest::class
+                      )
+        ),
+        tags: ['USERS'],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'Successful',
+                content: new OA\JsonContent(ref: TrvSuccessResource::class)
+            ),
+            new OA\Response(
+                response: 400,
+                description: 'Email invalid.',
+                content: new OA\JsonContent(ref: ErrorResource::class)
+            ),
+            new OA\Response(
+                response: 401,
+                description: 'Unauthenticated',
+                content: new OA\JsonContent(ref: ErrorResource::class)
+            ),
+            new OA\Response(
+                response: 500,
+                description: "Server error",
+                content: new OA\JsonContent(ref: ErrorResource::class)
+            )
+        ]
+    )]
+    public function update($id, Request $request): JsonResponse
+    {
+        return parent::update($id, $request); // TODO: Change the autogenerated stub
+    }
+
+    public function destroy($id): JsonResponse
+    {
+        return parent::destroy($id); // TODO: Change the autogenerated stub
     }
 }
